; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_vfs_bio.c_bufobj_wrefl.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_vfs_bio.c_bufobj_wrefl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bufobj = type { i32 }

@.str = private unnamed_addr constant [23 x i8] c"NULL bo in bufobj_wref\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bufobj_wrefl(%struct.bufobj* %0) #0 {
  %2 = alloca %struct.bufobj*, align 8
  store %struct.bufobj* %0, %struct.bufobj** %2, align 8
  %3 = load %struct.bufobj*, %struct.bufobj** %2, align 8
  %4 = icmp ne %struct.bufobj* %3, null
  %5 = zext i1 %4 to i32
  %6 = call i32 @KASSERT(i32 %5, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %7 = load %struct.bufobj*, %struct.bufobj** %2, align 8
  %8 = call i32 @ASSERT_BO_WLOCKED(%struct.bufobj* %7)
  %9 = load %struct.bufobj*, %struct.bufobj** %2, align 8
  %10 = getelementptr inbounds %struct.bufobj, %struct.bufobj* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %10, align 4
  ret void
}

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @ASSERT_BO_WLOCKED(%struct.bufobj*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
